[project]
name = "scene-feed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "fastapi>=0.138.0",
    "instaloader==4.14.2",
    "pydantic>=2.13.4",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
